--- a/views/alterar.ejs
+++ b/views/alterar.ejs
@@ -23,38 +23,39 @@
                 <form action="/alterar" method="post" class="form-control">
                     <input type="hidden" name="id" value="<%=id%>">
                     <input type="hidden" name="nome" value="<%=nome%>">
+                    <input type="hidden" name="id_a" value="<%=dados._id%>">
                     <div class="form-floating">               
                         <input type="date" name="data" id="floatingSelect" class='form-control' placeholder="Data" value="<%=dados.data.toISOString().slice(0,10)%>" required>
                         <label for="floatingInput">Data de Entrega:</label>
                     </div>
                     <div class="class form-floating">
                         <select name="tipo" id="floatingSelect" class="form-control">
-                            <option value="0">Selecione...</option>
+                            <option value="<%=dados.tipo%>">Selecione...</option>
                             <option value="1" <%=dados.tipo=="1"?"selected":""%>>Ac</option>
-                            <option value="2"<%=dados.tipo=="2"?"selected":""%>>At</option>
-                            <option value="3"<%=dados.tipo=="3"?"selected":""%>>Rec</option>
-                            <option value="4"<%=dados.tipo=="4"?"selected":""%>>Exame</option>  
+                            <option value="2" <%=dados.tipo=="2"?"selected":""%>>At</option>
+                            <option value="3" <%=dados.tipo=="3"?"selected":""%>>Rec</option>
+                            <option value="4" <%=dados.tipo=="4"?"selected":""%>>Exame</option>  
                         </select>
                         <label for="floatingSelect">Tipo de Atividade</label>
                     </div>
                      <div class="class form-floating">
                         <select name="disciplina" id="floatingSelect" class="form-control">
-                          <option value=""><%=dados.disciplina%></option>
-                            <option value="LP2">Linguagem de Programação</option>
-                            <option value="BDS">Banco de Dados</option>
-                            <option value="INW">Internet</option>
-                            <option value="MAT">Matemática</option>
+                          <option value="<%=dados.disciplina%>"><%=dados.disciplina%></option>
+                            <option value="LP2" <%=dados.tipo=="LP2"?"selected":""%>>Linguagem de Programação</option>
+                            <option value="BDS" <%=dados.tipo=="BD2"?"selected":""%>>Banco de Dados</option>
+                            <option value="INW" <%=dados.tipo=="INW"?"selected":""%>>Internet</option>
                         </select>
                         <label for="floatingSelect">Disciplina</label>
                     </div>
-                     <label for="" class="form-control">Como entregar:</label>    
+                    <label for="" class="form-control">Como entregar:</label> 
                     <input type="radio" name="entrega" class="form-check-input" id="" value="tarefa" <%=dados.entrega=="tarefa"?"checked":""%>>Tarefa no Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="chat" <%=dados.entrega=="chat"?"checked":""%>>Chat do Teams
                     <input type="radio" name="entrega" class="form-check-input" id="" value="email" <%=dados.entrega=="email"?"checked":""%>>Email
                     <input type="radio" name="entrega" class="form-check-input" id="" value="formulario" <%=dados.entrega=="formulario"?"checked":""%>>Forms<br>
                     <label for="" class="form-control">Orientações:</label>
                     <textarea name="orientacao" id="" cols="30" rows="10" class="form-control"><%=dados.instrucoes%></textarea>
-                    <input type="submit" value="Alterar" class="btn btn-danger">
+                    <input type="button" value="Cancelar" class="btn btn-outline-warning" onclick="history.back()">
+                    <input type="submit" value="Alterar" class="btn btn-outline-danger">
                 </form>
             </div>
 
