--- a/views/atividades2.ejs
+++ b/views/atividades2.ejs
@@ -40,10 +40,10 @@
                     </div>
                      <div class="class form-floating">
                         <select name="disciplina" id="floatingSelect" class="form-control">
+                            <option value="0">Selecione...</option>
                             <option value="LP2">Linguagem de Programação</option>
                             <option value="BDS">Banco de Dados</option>
                             <option value="INW">Internet</option>
-                            <option value="MAT">Matemática</option>
                         </select>
                         <label for="floatingSelect">Disciplina</label>
                     </div>
@@ -54,7 +54,7 @@
                     <input type="radio" name="entrega" class="form-check-input" id="" value="formulario">Forms<br>
                     <label for="" class="form-control">Orientações:</label>
                     <textarea name="orientacao" id="" cols="30" rows="10" class="form-control"></textarea>
-                    <input type="submit" value="Gravar" class="btn btn-danger">
+                    <input type="submit" value="Gravar" class="btn btn-outline-danger">
                 </form>
             </div>
             <div class="col-sm text-center order-1">
@@ -70,23 +70,23 @@
                         <div class="accordion-body">
                             <% for (var n=0; n<dados.length;n++){%>
                                 <div class="card">
-                                    <div class="card-header bg-dark text-light">Data:<%=dados[n].data.getDate()+1%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%>
+                                    <div class="card-header bg-dark text-light">Data: <%=dados[n].data.getDate()+1%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear()%>
                                     </div>
                                     <div class="card-body">
                                         <div class="card-title">Tipo:<%=dados[n].tipo%>
                                         </div>
-                                        <div class="card-title">Disciplina:<%=dados[n].disciplina%>
+                                        <div class="card-title">Disciplina: <%=dados[n].disciplina%>
                                         </div>
-                                        <div class="card-subtitle">Entrega:<%=dados[n].entrega%>
+                                        <div class="card-subtitle">Entrega: <%=dados[n].entrega%>
                                         </div>
-                                        <div class="card-text">Orientações:<%=dados[n].instrucoes%> 
+                                        <div class="card-text">Orientações: <%=dados[n].instrucoes%> 
                                         </div>
                                     </div>
                                     <div class="card-footer">
                                         <div class="input-group">
-                                            <input type="button" value="Entregue" class="btn btn-success form-control" onclick="(window.location.href='/entregue?id=<%=dados[n]._id%>')"> 
-                                            <input type="button" value="Alterar" class="btn btn-warning form-control" onclick="(window.location.href='/alterar?id=<%=dados[n]._id%>')">
-                                            <input type="button" value="Excluir" class="btn btn-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')">
+                                            <input type="button" value="Entregue" class="btn btn-outline-success form-control" onclick="(window.location.href='/entregue?id=<%=dados[n]._id%>')"> 
+                                            <input type="button" value="Alterar" class="btn btn-outline-warning form-control" onclick="(window.location.href='/alterar?id=<%=dados[n]._id%>')">
+                                            <input type="button" value="Excluir" class="btn btn-outline-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')">
                                         </div>
                                         </div>
                                 </div> <% }%>
@@ -150,7 +150,7 @@
                                     </div>
                                     <div class="card-footer">
                                         <div class="input-group">
-                                            <input type="button" value="Desfazer" class="btn btn-info form-control" onclick="(window.location.href='/desfazer?id=<%=dadosx[n]._id%>')"> 
+                                            <input type="button" value="Desfazer" class="btn btn-outline-info form-control" onclick="(window.location.href='/desfazer?id=<%=dadosx[n]._id%>')"> 
                                             
                                         </div>
                                         </div>
